Version 3.9.18

Version 3.9.17
- Fixed a serious unsigned / unsigned division bug
- Fixed indirect calls involving structure members
- Fixed promotion of word and byte arguments to functions
- Fixed a typo in the printf code for handling width
- Fixed catch/throw/setjmp/longjmp to correctly restore local variables
- Accept line numbers in BASIC programs
- Added <sys/p2_clock.h> for calculating P2 clock frequency
- Changed location of _clkfreq and _clkmode variables on P2 to match TAQOZ

Version 3.9.16
- Check environment variable FLEXCC_INCLUDE_PATH for included files
- Better relative path finding for include files thanks to David Betz
- Added register keyword for C
- Moved P2 CLKFREQ and CLKMODE longs down to initial hub memory; fixes a memory corruption issue with coginit/cognew
- Implemented struct initialization for C
- Implemented initializing function pointers
- Implemented __builtin_cogstart in C
- Fixed some bugs in indexing arrays of large types
- Fixed problems with using @RESULT in Spin
- Removed use of _wfopen_s in the C preprocessor for Windows

Version 3.9.15
- Fixed abort/catch in P2
- Fixed a problem with quotes in strings
- Fixed potential name conflict with labels, and improved optimization of branches as a side benefit
- Added -H and -E flags to fastspin to allow changing HUB start address. For example, `fastspin -2 -H 0x10000 -E foo.bas` compiles a program to load and execute at address 65536. If the `-E` is left off then it still loads at 0, but is padded to start executing at 0x10000.
- Added some more C library functions

Version 3.9.14
- Fixed a bug where function parameters to Spin functions without type specifiers could be coerced to the wrong type
- Improved C compatibility of various register declarations
- Implemented __builtin_alloca
- Improved optimization of P2 pin functions
- Support multiple statements per line in BASIC
- Implemented DEFSNG and DEFINT in BASIC
- Added optional xsel parameter to P2 clkset function