@@ -1,4 +1,8 @@
 Version 3.9.18
+- Improved BASIC parser to permit more complex expressions
+(e.g. multi-dimensional array references)
+- Support getword and getbyte instructions in inline assembly
+- Added some more C library functions
 
 Version 3.9.17
 - Fixed a serious unsigned / unsigned division bug
